# misis2023f-22-01-Trufmanov-M-A

./: CMakeLists.txt  CMakePresets.json  codeforces.id  readme.md  status.md
docs/: report.md
prj.codeforces/: 0096a.cpp  0151a.cpp  0199a.cpp  0266a.cpp  0281a.cpp  0339b.cpp  0884a.cpp  1038a.cpp  1407a.cpp  1675b.cpp  1701a.cpp  1771a.cpp  1800a.cpp  1879a.cpp  1886a.cpp  1886c.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  main.cpp  test_output.txt
prj.cw/res/: test_output.json
