add_executable(0151a 0151a.cpp)
add_executable(0199a 0199a.cpp)
add_executable(0884a 0884a.cpp)
add_executable(1407a 1407a.cpp)
add_executable(1675b 1675b.cpp)
add_executable(1701a 1701a.cpp)
add_executable(1771a 1771a.cpp)
add_executable(1800a 1800a.cpp)
add_executable(1879a 1879a.cpp)
add_executable(1886a 1886a.cpp)
add_executable(1886c 1886c.cpp)