find_package(GLUT REQUIRED)
#find_package(glfw3 CONFIG REQUIRED)
find_package(soil CONFIG REQUIRED)
find_package(nlohmann_json CONFIG REQUIRED) 
add_executable (main "main.cpp")
target_link_libraries(main PRIVATE GLUT::GLUT)
#target_link_libraries(main PRIVATE glfw3)
target_link_libraries(main PRIVATE soil)
target_link_libraries(main PRIVATE nlohmann_json::nlohmann_json)
add_subdirectory(manual_marking)
add_subdirectory(main)